<resources>
    <string name="app_name">LunchRoll</string>
    
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name ="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_setup">SetupActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_group_select">GroupSelectActivity</string>
    <string name="title_activity_friends_list">FriendsListActivity</string>
    <string name="title_activity_top_result">TopResultActivity</string>

    <!-- String related to Friends List -->
    <string name="create_group_string">Create Group</string>
    <string name="create_group_popup_header_string">Group Creation</string>
    <string name="create_group_popup_create_button_string">Create Group</string>
    <string name="create_group_popup_cancel_button_string">Cancel</string>
    <string name="create_group_popup_hint_string">Group Name Here</string>
    <string name="group_select_group_name_string">New Group</string>
    <string name="group_select_select_group_string">Select Group</string>
    <string name="activity_setup_set_prefs_string">Set Preferences</string>
    <string name="add_friend_string">Add Friend</string>
    <string name="add_friend_popup_hint_string">Username of Friend</string>
    <string name="add_friend_popup_cancel_button_string">Cancel</string>
    <string name="add_friend_popup_add_button_string">ADD FRIEND</string>
    <string name="register_username_hint_string">Username</string>
    <string name="register_email_hint_string">Email</string>
    <string name="register_password_hint_string">Enter Password</string>
    <string name="register_cancel_button_string">Cancel</string>
    <string name="register_register_button_string">Register</string>
</resources>
