<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_friend_username_field"
        android:layout_gravity="center_horizontal"
        android:inputType="text"
        android:paddingRight="8dp"
        android:paddingLeft="8dp"
        android:paddingTop="16dp"
        android:paddingBottom="8dp"
        android:background="@color/transparent"
        android:focusableInTouchMode="true"
        android:focusable="true"
        android:layout_weight=".5"
        android:hint="@string/add_friend_popup_hint_string" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:layout_weight=".5"
        android:paddingTop="12dp"
        android:id="@+id/add_friend_popup_buttons_layout"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_popup_cancel_button_string"
            android:id="@+id/add_friend_popup_cancel_button"
            android:layout_weight="2.19"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/myBlack"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_friend_popup_add_button_string"
            android:id="@+id/add_friend_popup_add_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.55"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/myBlack"/>
    </LinearLayout>
</LinearLayout>