<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:id="@+id/create_group_popup_layout"
    android:background="@drawable/friends_list_gradient">

    <TextView
        android:layout_width="181dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/create_group_popup_header_string"
        android:id="@+id/create_group_popup_header"
        android:layout_gravity="center"
        android:layout_weight="0.09"
        android:paddingTop="8dp" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="238dp"
        android:id="@+id/selected_friends"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.64"
        android:paddingTop="8dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:paddingTop="8dp"
        android:id="@+id/create_group_popup_name_layout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/create_group_popup_name_label"
            android:id="@+id/create_group_popup_name_label"
            android:layout_weight="0.09"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"/>

        <EditText
            android:layout_width="173dp"
            android:layout_height="wrap_content"
            android:id="@+id/create_group_popup_name_field"
            android:layout_gravity="center_horizontal"
            android:inputType="text"
            android:labelFor="@+id/create_group_popup_name_field"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            android:layout_weight="0.59" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        android:paddingTop="12dp"
        android:id="@+id/create_group_popup_buttons_layout"
        >

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_popup_create_button_string"
            android:id="@+id/create_group_popup_create_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1.55"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/myBlack"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_group_popup_cancel_button_string"
            android:id="@+id/create_group_popup_cancel_button"
            android:layout_gravity="center_horizontal"
            android:layout_weight="2.19"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/myBlack"
            />
    </LinearLayout>
</LinearLayout>